[package]
name = "regchest_command"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "regchest_test_client"
path = "src/regchest_test_client.rs"

[[bin]]
name = "regchest_test_server"
path = "src/regchest_test_server.rs"

[dependencies]
zingo-testutils = { git = "https://github.com/zingolabs/zingolib.git", rev = "167f6bd719bc445353572e5142b96f47c6b9762a"}
zingolib = { git = "https://github.com/zingolabs/zingolib.git", rev = "167f6bd719bc445353572e5142b96f47c6b9762a" }
zingoconfig = { git = "https://github.com/zingolabs/zingolib.git", rev = "167f6bd719bc445353572e5142b96f47c6b9762a" }
tokio = { version = "1", features = ["full"] }
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.dependencies]
clap = "4.4"
zcash_address = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zingo_rc.2" }
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zingo_rc.2" }
zcash_encoding = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zingo_rc.2" }
zcash_note_encryption = "0.4"
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zingo_rc.2" }
zcash_proofs = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zingo_rc.2" }
orchard = "0.6"
